Added new stuff

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 					<div class="social-icons pull-right">
-						<a href="https://www.linkedin.com/in/armin-mustafa-8b7b886" target="_blank"><img class="nav-social linkedin" src="docs/files/linkedin.png" /></a>
+						<a href="https://www.linkedin.com/in/armin-m-8b7b886/" target="_blank"><img class="nav-social linkedin" src="docs/files/linkedin.png" /></a>
 						<a href="https://twitter.com/arminmustafa?lang=en" target="_blank"><img class="nav-social twitter" src="docs/files/twitter.png" /></a>
 						<!--<a href="https://www.researchgate.net/profile/Armin_Mustafa" target="_blank"><img class="nav-social" src="docs/files/rg.png" /></a>-->
 						<a href="https://www.facebook.com/arminmustafa" target="_blank"><img class="nav-social" src="docs/files/fb.png" /></a>
@@ -76,7 +76,7 @@
 		<div class="container-fluid">
 			<div class="cos col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12" id="top">
 				<h3><font size="+2" color="#000080">Biography</font></h3>
-				<b><font size="+1"> Royal Academy of Engineering Research Fellow </font> <br> </b> <br>
+				<b><font size="+1"> Royal Academy of Engineering Research Fellow, FHEA </font> <br> </b> <br>
 				<!--<small><i><a href="http://www.surrey.ac.uk/cvssp/">Centre for Vision, Speech and Signal Processing</a>,<br>
 				<a href ="http://www.surrey.ac.uk/"> University of Surrey </a>, UK </b></i></small> <br> -->
 				
@@ -219,6 +219,7 @@
 							in <i>Real VR - Digitial Immersive Reality 2020</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/files/RealVR.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="https://www.amazon.com/dp/3030418154/ref=cm_sw_em_r_mt_dp_U_NpowEb1PKTZFZ">Website</a>
 							</span>
 						</td>
 					</tr>
@@ -336,6 +337,24 @@
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/hlc19/ArminHLC2019.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="docs/hlc19/poster.pdf">Poster</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/hlc19/HLC_AI.png" />
+							</a>
+						</td>
+						<td>
+							<b>Learning Human Reconstruction from Synthetic Dataset (Short paper)</b><br>
+							Akin Caliskan, Armin Mustafa, Evren Imre, and Adrian Hilton<br>
+							at <i><a href="https://www.cvmp-conference.org/2019/">The 16th ACM SIGGRAPH European Conference on Visual Media Production (CVMP)</a> 2019</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="https://www.cvmp-conference.org/files/2019/short/51.pdf">PDF</a>
 							</span>
 						</td>
 					</tr>
@@ -657,6 +676,15 @@
 				<table class="table-responsive">
 					<tr>
 						<td>
+						<img class="img-rounded" src="docs/misc/birmingham.png" alt="" width="40" height="40"/>
+						</td>
+						<td>
+							<b> &nbsp 4D Vision for Scene Understanding, 28 Feb 2020 </b></font> <br/>
+							&nbsp at University of Birmingham, UK <br/> <br/>
+						</td>
+					</tr>
+					<tr>
+						<td>
 						<img class="img-rounded" src="docs/misc/qmul.png" alt="" width="40" height="40"/>
 						</td>
 						<td>
@@ -868,7 +896,19 @@
 					</tr>
 				</table>
 				<br/>
-				<h4><b><font size="+1">Education</font></b></h4>
+				<h4><b><font size="+1">Education and Certificates</font></b></h4>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<img class="img-rounded" src="docs/files/hea.jpg" alt="" width="40" height="40"/>
+						</td>
+						<td>
+							<font size="+0.25">&nbsp Graduate Certificate of Learning and Teaching: Jan' 2018 – Sep’ 2019</font> <br style="line-height: 8px" />
+							<b>&nbsp Higher Education Academy, University of Surrey, UK </b><br/>
+						</td>
+					</tr>
+				</table>
+				<br/>
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -934,8 +974,22 @@
 						<img class="img-rounded" src="docs/files/surrey.png" alt="" width="40" height="40" />
 						</td>
 						<td>
-							<font size="+0.25">Teaching Assistant: Oct’ 2013 – Jan’ 2016</font> <br style="line-height: 8px" />
-							<b>Centre for Vision, Speech and Signal Processing, University of Surrey, UK </b><br/>
+							<font size="+0.25">&nbsp Teaching Assistant for 'Advanced Signal Processing (EEEM007)': Jan’ 2020 – Apr' 2020</font> <br style="line-height: 8px" />
+							<font size="+0.25">&nbsp Tutor for 'Fundamentals of Digital Signal Processing (EEE3008)': Sep’ 2019 – Dec' 2019</font> <br style="line-height: 8px" />
+							<b>&nbsp University of Surrey, UK </b><br/>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+						<img class="img-rounded" src="docs/files/surrey.png" alt="" width="40" height="40" />
+						</td>
+						<td>
+							<font size="+0.25">&nbsp Demonstrator for 'C++ and Object-Oriented Design(EEE2047)' (alternate semester): Jan' 2014 – Jun’ 2016</font> <br style="line-height: 8px" />
+							<font size="+0.25">&nbsp Demonstrator for 'Programming in C (EEE1035)' (alternate semester): Oct’ 2013 – Dec’ 2015</font> <br style="line-height: 8px" />
+							<b>&nbsp University of Surrey, UK </b><br/>
 						</td>
 					</tr>
 				</table>
@@ -946,8 +1000,8 @@
 						<img class="img-rounded" src="docs/files/iitk.png" alt="" width="40" height="40"/>
 						</td>
 						<td>
-							<font size="+0.25">Teaching Assistant: Apr’ 2009 – Mar’ 2010</font> <br style="line-height: 8px" />
-							<b>Indian Institute of Technology, Kanpur, India</b><br/>
+							<font size="+0.25">&nbsp Teaching Assistant: Apr’ 2009 – Mar’ 2010</font> <br style="line-height: 8px" />
+							<b>&nbsp Indian Institute of Technology, Kanpur, India</b><br/>
 						</td>
 					</tr>
 				</table>
