Correct image upload

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 					<tr>
 						<td>
 							<a href="#">
-								<img class="imgres" src="docs/hlc19/HLC_AI.png" />
+								<img class="imgres" src="docs/files/cvmp19.png" />
 							</a>
 						</td>
 						<td>
