added ijcv paper

--- a/index.html
+++ b/index.html
@@ -191,6 +191,26 @@
 					<tr>
 						<td>
 							<a href="#">
+								<img class="imgres" src="docs/cvpr16/ijcv19.png" />
+							</a>
+						</td>
+						<td>
+							<b>Temporally Coherent General Dynamic Scene Reconstruction</b><br>
+							Armin Mustafa, Marco Volino, Hansung Kim, Jean-Yves Guillemaut, and Adrian Hilton<br>
+							at <i>International Journal in Computer Vision (IJCV) 2020</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="docs/cvpr16/ArminIJCV2019.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1907.08195">Website</a>
+								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=FFVTIY47NQ8&t=1s">Video</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
 								<img class="imgres" src="docs/files/icra20.jpg" />
 							</a>
 						</td>
@@ -278,26 +298,6 @@
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/files/Caliskan2019.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1910.01241">Website</a>
-							</span>
-						</td>
-					</tr>
-				</table>
-				<br/>
-				<table class="table-responsive">
-					<tr>
-						<td>
-							<a href="#">
-								<img class="imgres" src="docs/cvpr16/ijcv19.png" />
-							</a>
-						</td>
-						<td>
-							<b>Temporally Coherent General Dynamic Scene Reconstruction</b><br>
-							Armin Mustafa, Marco Volino, Hansung Kim, Jean-Yves Guillemaut, and Adrian Hilton<br>
-							under review at <i>International Journal in Computer Vision (IJCV) 2019</i><br>
-							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/cvpr16/ArminIJCV2019.pdf">PDF</a>
-								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1907.08195">Website</a>
-								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=FFVTIY47NQ8&t=1s">Video</a>
 							</span>
 						</td>
 					</tr>
