Added new papers

--- a/index.html
+++ b/index.html
@@ -191,17 +191,70 @@
 					<tr>
 						<td>
 							<a href="#">
+								<img class="imgres" src="docs/misc/cvpr2021.png" />
+							</a>
+						</td>
+						<td>
+							<b>Multi-person Implicit Reconstruction from a Single Image</b><br>
+							Armin Mustafa, Akin Caliskan, Lourdes Agapito, and Adrian Hilton<br>
+							at <i>IEEE International Conference in Computer Vision & Pattern Recognition (CVPR) 2021</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2021/html/Mustafa_Multi-Person_Implicit_Reconstruction_From_a_Single_Image_CVPR_2021_paper.html">Website</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/cvpr2021w.png" />
+							</a>
+						</td>
+						<td>
+							<b>Temporal Consistency Loss for High Resolution Textured and Clothed 3D Human Reconstruction From Monocular Video</b><br>
+							Akin Caliskan, Armin Mustafa, and Adrian Hilton<br>
+							at <i>IEEE International Conference in Computer Vision & Pattern Recognition Workshops (CVPRW) 2021</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2021W/DynaVis/html/Caliskan_Temporal_Consistency_Loss_for_High_Resolution_Textured_and_Clothed_3D_CVPRW_2021_paper.html">Website</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
 								<img class="imgres" src="docs/cvpr16/ijcv19.png" />
 							</a>
 						</td>
 						<td>
 							<b>Temporally Coherent General Dynamic Scene Reconstruction</b><br>
 							Armin Mustafa, Marco Volino, Hansung Kim, Jean-Yves Guillemaut, and Adrian Hilton<br>
-							at <i>International Journal in Computer Vision (IJCV) 2020</i><br>
+							at <i>International Journal in Computer Vision (IJCV) 2021</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/cvpr16/ArminIJCV2019.pdf">PDF</a>
-								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1907.08195">Website</a>
+								<a class="btn btn-success" target="_blank" href="https://link.springer.com/article/10.1007/s11263-020-01367-2">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=FFVTIY47NQ8&t=1s">Video</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/accv2020.png" />
+							</a>
+						</td>
+						<td>
+							<b>Multi-View Consistency Loss for Improved Single-Image 3D Reconstruction of Clothed People</b><br>
+							Akin Caliskan, Armin Mustafa, Evren Imre, and Adrian Hilton<br>
+							at <i>The Asian Conference on Computer Vision (ACCV), 2020</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="https://openaccess.thecvf.com/content/ACCV2020/html/Caliskan_Multi-View_Consistency_Loss_for_Improved_Single-Image_3D_Reconstruction_of_Clothed_ACCV_2020_paper.html">Website</a>
 							</span>
 						</td>
 					</tr>
@@ -219,7 +272,6 @@
 							Quang-Hieu Pham, Pierre Sevestre, Ramanpreet Singh Pahwa, Huijing Zhan, Chun Ho Pang, Yuda Chen, Armin Mustafa, Vijay Chandrasekhar, and Jie Lin<br>
 							at <i>IEEE International Conference on Robotics and Automation (ICRA) 2020</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/files/icra20.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="https://github.com/I2RDL2/ASTAR-3D">Website</a>
 							</span>
 						</td>
@@ -238,7 +290,6 @@
 							Marco Volino, Armin Mustafa, Jean-Yves Guillemaut and Adrian Hilton<br>
 							in <i>Real VR - Digitial Immersive Reality 2020</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/files/RealVR.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="https://www.amazon.com/dp/3030418154/ref=cm_sw_em_r_mt_dp_U_NpowEb1PKTZFZ">Website</a>
 							</span>
 						</td>
@@ -257,7 +308,6 @@
 							Armin Mustafa, Chris Russell, and Adrian Hilton<br>
 							at <i>International Conference on Computer Vision (ICCV) 2019</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/iccv19/ArminICCV2019.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/U4D/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=mA60vkLXBJ0&t=30s">Video</a>
 							</span>
@@ -277,7 +327,6 @@
 							Armin Mustafa and Adrian Hilton<br>
 							at <i>International Journal in Computer Vision (IJCV) 2019</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/ijcv19/ArminIJCV2019.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/SC4D/">Website</a>
 							</span>
 						</td>
@@ -296,8 +345,7 @@
 							Akin Caliskan, Armin Mustafa, Evren Imre, and Adrian Hilton<br>
 							at <i>International Conference on Computer Vision Workshop (ICCVW) 2019</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/files/Caliskan2019.pdf">PDF</a>
-								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1910.01241">Website</a>
+								<a class="btn btn-success" target="_blank" href="https://www.semanticscholar.org/paper/Learning-Dense-Wide-Baseline-Stereo-Matching-for-Caliskan-Mustafa/068a54a6a3d543db189ecc5a870e442eda3a8f72">Website</a>
 							</span>
 						</td>
 					</tr>
@@ -315,7 +363,6 @@
 							Marco Volino, Armin Mustafa, Jean-Yves Guillemaut and Adrian Hilton<br>
 							at <i>3D Vision (3DV) 2019</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/files/volino_3dv2019.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="https://cvssp.org/projects/lightfields/light-field-compression-using-eigen-textures/">Website</a>
 							</span>
 						</td>
@@ -336,7 +383,6 @@
 							at <i><a href="http://mi21-hlc.doc.ic.ac.uk">Human Like Computing Machine-Intelligence Workshop (MI21-HLC)</a> 2019</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/hlc19/ArminHLC2019.pdf">PDF</a>
-								<a class="btn btn-success" target="_blank" href="docs/hlc19/poster.pdf">Poster</a>
 							</span>
 						</td>
 					</tr>
@@ -354,7 +400,7 @@
 							Akin Caliskan, Armin Mustafa, Evren Imre, and Adrian Hilton<br>
 							at <i><a href="https://www.cvmp-conference.org/2019/">The 16th ACM SIGGRAPH European Conference on Visual Media Production (CVMP)</a> 2019</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="https://www.cvmp-conference.org/files/2019/short/51.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="https://www.cvmp-conference.org/files/2019/short/51.pdf">Website</a>
 							</span>
 						</td>
 					</tr>
@@ -372,7 +418,6 @@
 							Armin Mustafa,  Hansung Kim, and Adrian Hilton<br>
 							at <i>IEEE Transactions in Image Processing (TIP) 2018</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/tip18/ArminTIP2018.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/MSFD/">Website</a>
 							</span>
 						</td>
@@ -392,7 +437,6 @@
 							Armin Mustafa, Marco Volino, Jean-Yves Guillemaut and Adrian Hilton<br>
 							at <i>3D Vision (3DV) 2017</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/3dv17/Armin3DV2017.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/4DLFV/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/SMyGsHG4Ung">Video</a>
 								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
@@ -414,11 +458,8 @@
 							at <i>IEEE International Conference in Computer Vision & Pattern Recognition (CVPR) 2017</i><br>
 							<!-- btn-group is to create groups of buttons. The size of the class brand btn-group in this case, it does not specify the specific button -->
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/cvpr17/ArminCVPR2017.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/SemRecon/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/obnDpiDnScI">Video</a>
-								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
-								<!--<a class="btn btn-success" target="_blank" href="#">data</a>-->
 							</span>
 						</td>
 					</tr>
@@ -437,10 +478,8 @@
 							Armin Mustafa, Hansung Kim, Jean-Yves Guillemaut and Adrian Hilton<br>
 							at <i>IEEE International Conference in Computer Vision & Pattern Recognition (CVPR) 2016</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/cvpr16/ArminCVPR2016.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/4DRecon/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/bm_P13_-DsQ">Video</a>
-								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
 							</span>
 						</td>
 					</tr>
@@ -458,7 +497,6 @@
 							Armin Mustafa, Hansung Kim and Adrian Hilton<br>
 							at <i>The 14th European Conference on Computer Vision (ECCV) 2016</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/eccv16/ArminECCV2016.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/4Dnonseq/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/GPu-UKppCfk">Video</a>
 							</span>
@@ -479,7 +517,6 @@
 							Armin Mustafa, Hansung Kim, Jean-Yves Guillemaut and Adrian Hilton<br>
 							at <i>International Conference on Computer Vision (ICCV) 2015</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/iccv15/ArminICCV2015.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/DyRecon/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/uIDeJ1_MvaE">Video</a>
 							</span>
@@ -499,10 +536,8 @@
 							Armin Mustafa, Hansung Kim, Evren Imre and Adrian Hilton<br>
 							at <i>3D Vision (3DV) 2015</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/3dv15/Armin3DV2015.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/SFD/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/m3NThvKpR5w">Video</a>
-								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
 							</span>
 						</td>
 					</tr>
@@ -540,7 +575,6 @@
 							Armin Mustafa and K.S. Venkatesh<br>
 							in Speech, Image, and Language Processing for Human Computer Interaction: Multi-Modal Advancements 2012</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/masters/book.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://www.igi-global.com/book/speech-image-language-processing-human/60784">Website</a>								
 							</span>
 						</td>
@@ -560,7 +594,7 @@
 							Armin Mustafa and K.S. Venkatesh<br>
 							at <i>In International Conference on Hybrid Information Technology, volume 6935 of Lecture Notes in Computer Science 2011</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/masters/paper.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="https://www.researchgate.net/publication/221416385_Background_Reflectance_Modeling_for_Robust_Finger_Gesture_Detection_in_Highly_Dynamic_Illumination">Website</a>								
 							</span>
 						</td>
 					</tr>
