--- a/index.html
+++ b/index.html
@@ -645,6 +645,20 @@
 					<tr>
 						<td>
 							<a href="#">
+								<img class="imgres" src="docs/misc/dynavis2021.png" />
+							</a>
+						</td>
+						<td>
+							<a href="https://dynavis.github.io/2021/"> DynaVis - The Third International Workshop on Dynamic Scene Reconstruction @ CVPR 2021 </a> in June 2021, Online <br>
+							Organisers: <a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a>, <a href="https://web.stanford.edu/~zollhoef/">Michael Zollhofer</a>, <a href="https://dancasas.github.io/">Dan Casas</a>, <a href="https://researchportal.bath.ac.uk/en/persons/christian-richardt">Christian Richardt</a>  and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a> <br>
+						</td>
+					</tr>
+				</table>	
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
 								<img class="imgres" src="docs/misc/dynavis20.jpg" />
 							</a>
 						</td>
@@ -864,7 +878,7 @@
 						<img class="img-rounded" src="docs/misc/ucl.png" alt="" width="40" height="40"/>
 						</td>
 						<td>
-							<font size="+0.25"> &nbsp Visiting Researcher: Jan' 2020 - Present, <b>Host</b>: <a href="http://www0.cs.ucl.ac.uk/staff/L.Agapito/"> Prof. Lourdes Agapito </a> </font> <br style="line-height: 8px" />
+							<font size="+0.25"> &nbsp Visiting Researcher: Jan' 2020 - Nov' 2020, <b>Host</b>: <a href="http://www0.cs.ucl.ac.uk/staff/L.Agapito/"> Prof. Lourdes Agapito </a> </font> <br style="line-height: 8px" />
 							<b> &nbsp University College London (UCL), UK </b><br/>
 						</td>
 					</tr>
