--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 							at <i>IEEE International Conference in Computer Vision & Pattern Recognition (CVPR) 2021</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2021/html/Mustafa_Multi-Person_Implicit_Reconstruction_From_a_Single_Image_CVPR_2021_paper.html">Website</a>
+								<a class="btn btn-success" target="_blank" href="https://youtu.be/zElti-xPSQg">Video</a>
 							</span>
 						</td>
 					</tr>
