--- a/index.html
+++ b/index.html
@@ -641,7 +641,34 @@
 				<br/>
 				<h4><b><font size="+2">Service</font></b></h4>
 				<!-- <h4>2019</h4> -->
-				<b><font size="+0.5"> Organised </b><br>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/3dv2021.png" />
+							</a>
+						</td>
+						<td>
+							<a href="https://3dv2021.surrey.ac.uk/"> International Conference on 3D Vision (3DV 2021) </a> in December 2021, Online <br>
+							<b>Publication Chair</b>
+						</td>
+					</tr>
+				</table>	
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/cvmp2021.png" />
+							</a>
+						</td>
+						<td>
+							<a href="https://www.cvmp-conference.org/2021/"> The 18th European Conference on Visual Media Production (CVMP 2021) </a> in December 2021, London <br>
+							<b>Short Papers Chair</b>
+						</td>
+					</tr>
+				</table>	
+				<br/>
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -651,7 +678,36 @@
 						</td>
 						<td>
 							<a href="https://dynavis.github.io/2021/"> DynaVis - The Third International Workshop on Dynamic Scene Reconstruction @ CVPR 2021 </a> in June 2021, Online <br>
+							<b>Organiser</b> <br>
 							Organisers: <a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a>, <a href="https://web.stanford.edu/~zollhoef/">Michael Zollhofer</a>, <a href="https://dancasas.github.io/">Dan Casas</a>, <a href="https://researchportal.bath.ac.uk/en/persons/christian-richardt">Christian Richardt</a>  and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a> <br>
+						</td>
+					</tr>
+				</table>	
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/3dv2020.png" />
+							</a>
+						</td>
+						<td>
+							<a href="http://3dv2020.dgcv.nii.ac.jp/"> International Conference on 3D Vision (3DV 2020) </a> in November 2020, Online <br>
+							<b>Area Chair</b>
+						</td>
+					</tr>
+				</table>	
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/cvmp2020.png" />
+							</a>
+						</td>
+						<td>
+							<a href="https://www.cvmp-conference.org/2020/"> The 17th European Conference on Visual Media Production (CVMP 2020) </a> in December 2020, Online <br>
+							<b>Public Relations Chair</b>
 						</td>
 					</tr>
 				</table>	
@@ -665,6 +721,7 @@
 						</td>
 						<td>
 							<a href="https://dynavis.github.io/2020/"> DynaVis - The Second International Workshop on Dynamic Scene Reconstruction @ CVPR 2020 </a> in June 2020, Seattle, Washington <br>
+							<b>Organiser</b> <br>
 							Organisers: <a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a>, <a href="https://web.stanford.edu/~zollhoef/">Michael Zollhofer</a>, <a href="https://dancasas.github.io/">Dan Casas</a>, <a href="https://researchportal.bath.ac.uk/en/persons/christian-richardt">Christian Richardt</a>  and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a> <br>
 						</td>
 					</tr>
@@ -678,13 +735,13 @@
 							</a>
 						</td>
 						<td>
-							<br>
 							<a href="https://dynavis.github.io/2019/"> DynaVis - The First International Workshop on Dynamic Scene Reconstruction @ CVPR 2019 </a> on 15 June 2019, Long Beach, California <br>
+							<b>Organiser</b> <br>
 							Organisers: <a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a>, <a href="https://web.stanford.edu/~zollhoef/">Michael Zollhofer</a>, <a href="https://dancasas.github.io/">Dan Casas</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a> <br>
 						</td>
 					</tr>
 				</table>	
-				<br/>				
+				<br/>			
 				<!-- <h4>2017</h4> -->
 				<table class="table-responsive">
 					<tr>
@@ -695,6 +752,7 @@
 						</td>
 						<td>
 							<a href="http://www.bmva.org/_media/meetings:BMVA3DSceneReport.pdf"> BMVA symposium on Dynamic Scene Reconstruction </a> on 21 June 2017 , London <br>
+							<b>Organiser</b> <br>
 							Organisers: <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a>, <a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a><br>
 						</td>
 					</tr>
