--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                 <!-- BIO TEXT -->
                 <div id="bio_text">
                     <p>
-                        I am a <a target="_blank" href="https://www.raeng.org.uk/news/news-releases/2018/september/academy-awards-eight-new-research-fellowships"> Royal Academy of Engineering Research Fellow</a> in the <a target="_blank" href="https://www.surrey.ac.uk/centre-vision-speech-signal-processing">Centre for Vision, Speech and Signal Processing</a>, <a target="_blank" href="https://www.surrey.ac.uk/">University of Surrey</a> working in 4D Vision for perceptive machines. The emergence of machines that interact with their environment has led to an increasing demand for automatic visual understanding of real-world scenes. My research aims to better understand complex scenes so that machines can efficiently model and interpret real-world for a range of socially beneficial applications including autonomous systems, augmented reality and healthcare. 
+                        I am a <a target="_blank" href="https://www.raeng.org.uk/news/news-releases/2018/september/academy-awards-eight-new-research-fellowships"> Royal Academy of Engineering Research Fellow</a> in the <a target="_blank" href="https://www.surrey.ac.uk/centre-vision-speech-signal-processing">Centre for Vision, Speech and Signal Processing</a>, <a target="_blank" href="https://www.surrey.ac.uk/">University of Surrey</a> working in 4D Vision for perceptive machines. The emergence of machines that interact with their environment has led to an increasing demand for automatic visual understanding of real-world scenes. My research exploits Artificial Intelligence (AI) aims to better understand complex scenes so that machines can efficiently model and interpret real-world for a range of socially beneficial applications including autonomous systems, augmented reality and healthcare. 
                     </p>
                     <p>
-                        I am currently a <a target="_blank" href="https://www.surrey.ac.uk/people/armin-mustafa"> Senior Research Fellow </a> at CVSSP, University of Surrey, where I finished PhD in 'General dynamic scene reconstruction from multi-view videos' in 2016, supervised by <a href="https://www.surrey.ac.uk/people/adrian-hilton">Prof. Adrian Hilton</a>. I have previously worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years (2010 - 2013) in Computer Vision. In 2010 I received M.Tech. degree from the Indian Institute of Technology (IIT), Kanpur, India supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> in Human Computer Interaction. Please refer to <a href="#cv">CV</a> for more information.
+                        I am currently a <a target="_blank" href="https://www.surrey.ac.uk/people/armin-mustafa"> Lecturer in Computer Vision and AI </a> at CVSSP, University of Surrey, where I finished PhD in 'General dynamic scene reconstruction from multi-view videos' in 2016, supervised by <a href="https://www.surrey.ac.uk/people/adrian-hilton">Prof. Adrian Hilton</a>. I have previously worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years (2010 - 2013) in Computer Vision. In 2010 I received M.Tech. degree from the Indian Institute of Technology (IIT), Kanpur, India supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> in Human Computer Interaction. Please refer to <a href="#cv">CV</a> for more information.
                     </p>
                     <p>
                         <b> Research interests: </b> 3D/4D Computer Vision, Scene Understanding, Segmentation, Multi-view Performance Capture and Human Computer Interaction which include robust computer vision to model and understand real world scenes.
@@ -201,6 +201,24 @@
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2021/html/Mustafa_Multi-Person_Implicit_Reconstruction_From_a_Single_Image_CVPR_2021_paper.html">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/zElti-xPSQg">Video</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/silt.png" />
+							</a>
+						</td>
+						<td>
+							<b>SILT: Self-supervised Lighting Transfer Using Implicit Image Decomposition</b><br>
+							Nikolina Kubiak, Armin Mustafa, Graeme Phillipson, Stephen Jolly, and Simon Hadfield<br>
+							at <i> The 32nd British Machine Vision Conference(BMCV) 2021</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="http://personal.ee.surrey.ac.uk/Personal/S.Hadfield/papers/Kubiak21SILT.pdf">Website</a>
 							</span>
 						</td>
 					</tr>
