adding new position

--- a/index.html
+++ b/index.html
@@ -952,6 +952,18 @@
 				<table class="table-responsive">
 					<tr>
 						<td>
+						<img class="img-rounded" src="docs/files/surrey.png" alt="" width="40" height="40"/>
+						</td>
+						<td>
+							<font size="+0.25"> &nbsp Lecturer in Computer Vision and Artificial Intelligence: Oct' 2021 - Present</font> <br style="line-height: 8px" />
+							<b>&nbsp Centre for Vision, Speech and Signal Processing, University of Surrey, UK </b><br/>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
 						<img class="img-rounded" src="docs/misc/ucl.png" alt="" width="40" height="40"/>
 						</td>
 						<td>
@@ -979,7 +991,7 @@
 						<img class="img-rounded" src="docs/files/surrey.png" alt="" width="40" height="40"/>
 						</td>
 						<td>
-							<font size="+0.25"> &nbsp Senior Research Fellow: Aug' 2018 - Present</font> <br style="line-height: 8px" />
+							<font size="+0.25"> &nbsp Senior Research Fellow: Aug' 2018 - Sep' 2021</font> <br style="line-height: 8px" />
 							<b>&nbsp Centre for Vision, Speech and Signal Processing, University of Surrey, UK </b><br/>
 						</td>
 					</tr>
